--- a/.wodby/pipeline.yml
+++ b/.wodby/pipeline.yml
@@ -12,7 +12,7 @@ jobs:
     - cache:
         path: ~/.composer/cache
         key: composer.lock
-    - run: wget -qO- https://api.wodby.com/api/v1/get/cli?version=dev | sh
+    - run: wget -qO- https://api.wodby.com/api/v1/get/cli?version=2.0 | sh
     - run: wodby ci init $WODBY_APP_INSTANCE_ID
     - run: wodby ci run -v $HOME/.composer:$HOME/.composer -s php -- composer install -n
     - run: wodby ci build php .
