--- a/.wodby/pipeline.yml
+++ b/.wodby/pipeline.yml
@@ -13,7 +13,7 @@ jobs:
         path: ~/.composer/cache
         key: composer.lock
     - run: wget -qO- https://api.wodby.com/api/v1/get/cli?version=2.0 | sh
-    - run: wodby ci init $WODBY_APP_INSTANCE_ID
+    - run: wodby ci init $WODBY_BUILD_ID
     - run: wodby ci run -v $HOME/.composer:$HOME/.composer -s php -- composer install -n
     - run: wodby ci build php .
     - run: wodby ci build nginx web --to /var/www/html/web
