--- a/.wodby/pipeline.yml
+++ b/.wodby/pipeline.yml
@@ -11,7 +11,7 @@ jobs:
     - clone
     - cache:
         path: ~/.composer/cache
-        key: composer.lock
+        key: 'composer-{{ hash "composer.lock" }}-v1'
     - run: wget -qO- https://api.wodby.com/api/v1/get/cli?version=2.0 | sh
     - run: wodby ci init $WODBY_BUILD_ID
     - run: wodby ci run -v $HOME/.composer:$HOME/.composer -s php -- composer install -n
