--- a/.wodby/pipeline.yml
+++ b/.wodby/pipeline.yml
@@ -9,12 +9,19 @@ jobs:
   build:
     steps:
     - clone
-    - cache:
-        path: ~/.composer/cache
+    
+    - cache_restore:
+        path: ~/.composer
         key: 'composer-{{ hash "composer.lock" }}-v1'
+        
     - run: wget -qO- https://api.wodby.com/api/v1/get/cli?version=2.0 | sh
     - run: wodby ci init $WODBY_BUILD_ID
     - run: wodby ci run -v $HOME/.composer:/home/wodby/.composer -s php -- composer install -n
+
+    - cache_save:
+        key: 'composer-{{ hash "composer.lock" }}-v1'
+        path: ~/.composer
+    
     - run: wodby ci build php
     - run: wodby ci build nginx --from web --to /var/www/html/web
     - run: wodby ci release
