--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,43 @@
     "require": {
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
-        "drupal/backup_migrate": "^5.0",
+        "drupal/admin_toolbar": "^3.1",
+        "drupal/ajax_loader": "^2.0",
+        "drupal/allowed_formats": "^1.5",
+        "drupal/backup_migrate": "5.0.1",
+        "drupal/captcha": "1.2.0",
         "drupal/core-composer-scaffold": "^9.3",
         "drupal/core-project-message": "^9.3",
-        "drupal/core-recommended": "^9.3"
+        "drupal/core-recommended": "^9.3",
+        "drupal/drimage": "^2.0",
+        "drupal/easy_breadcrumb": "^2.0",
+        "drupal/editor_advanced_link": "^2.0",
+        "drupal/edw_healthcheck": "1.10.0",
+        "drupal/facets": "^2.0",
+        "drupal/field_group": "^3.2",
+        "drupal/honeypot": "^2.0",
+        "drupal/link_attributes": "^1.11",
+        "drupal/mail_login": "^2.6",
+        "drupal/menu_link_attributes": "^1.2",
+        "drupal/metatag": "^1.19",
+        "drupal/optional_end_date": "^1.2",
+        "drupal/pathauto": "^1.9",
+        "drupal/redirect": "^1.7",
+        "drupal/search_api": "^1.23",
+        "drupal/simple_search_form": "^1.4",
+        "drupal/smart_trim": "^1.3",
+        "drupal/smtp": "^1.0",
+        "drupal/spamspan": "^1.2",
+        "drupal/token": "^1.10",
+        "drupal/twig_tweak": "^3.1",
+        "drupal/webform": "^6.1",
+        "drupal/xmlsitemap": "^1.2",
+        "drush/drush": "^11.0"
     },
     "require-dev": {
-        "drupal/core-dev": "^9.3"
+        "drupal/core-dev": "^9.3",
+        "drupal/stage_file_proxy": "^1.2",
+        "drupal/twig_vardumper": "^3.0"
     },
     "conflict": {
         "drupal/drupal": "*"
