fix #6 Remove artifact on success (#7)

--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -80,3 +80,8 @@ jobs:
 
       - name: 'Clean releases older than 90 days'
         run:  ssh server 'cd ${{ secrets.TEST_PROJECT_DIR }} && find release-* -maxdepth 1 -type d -mtime +90 -prune -exec rm -rf {} \;'
+
+      - name: 'Remove artifact'
+        uses: geekyeggo/delete-artifact@v1
+        with:
+          name: ${{ needs.build.outputs.filename }}
