--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "require-dev": {
         "drupal/core-dev": "~9.3.0",
         "getdkan/mock-chain": "^1.3.0",
-        "weitzman/drupal-test-traits": "^1.5"
+        "weitzman/drupal-test-traits": "^1.5",
+        "phpspec/prophecy-phpunit": "^2"
     },
     "conflict": {
         "drupal/drupal": "*"
