Issue #3255749 by Spokje, alexpott, shaal, longwave, cilefen, AaronMcHale, benjifisher, Mile23: Composer v2.2 prompts to authorize pluginsile
(cherry picked from commit 12e07497e1cb72be969186ad3fcd816449237987)

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,11 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "drupal/core-composer-scaffold": true,
+            "drupal/core-project-message": true
+        },
         "sort-packages": true
     },
     "extra": {
