--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,12 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "drush/drush": true,
+            "composer/installers": true,
+            "drupal/*": true
+        }
     },
     "extra": {
         "drupal-scaffold": {
