--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
                 "",
                 "<bg=yellow;fg=black>Next steps</>:",
 
-                "  * Install the site: https://www.drupal.org/docs/installing-drupal",
+                "  * Install the site: https://www.drupal.org/docs/8/install",
                 "  * Read the user guide: https://www.drupal.org/docs/user_guide/en/index.html",
                 "  * Get support: https://www.drupal.org/support",
                 "  * Get involved with the Drupal community:",
