--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -62,6 +62,7 @@ module:
   metatag_facebook: 0
   metatag_open_graph: 0
   metatag_twitter_cards: 0
+  mysql: 0
   node: 0
   optional_end_date: 0
   options: 0
