--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -38,7 +38,7 @@ jobs:
           ssh_user:           ${{ secrets.PROD_SSH_USER }}
           ssh_host:           ${{ secrets.PROD_SSH_HOST }}
           ssh_key:            ${{ secrets.PROD_SSH_KEY }}
-          release_id:         ${{ github.ref_name }}
+          release_id:         'release-${{ github.ref_name }}'
           release_filename:   ${{ steps.artifact.outputs.filename }}
           project_dir:        /var/www/html/todo.example.org
           artifacts_dir:      /var/www/artifacts/todo.example.org
